--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&family=PT+Serif&family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet">
-    
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/b63d77b0fb.js" crossorigin="anonymous"></script>
 </head>
 <body>
      <nav>
-    <a  class = "nav-link" href="index.html" style="color: #1b1b1b; font-family:Comforter Brush; font-size: 88px; text-decoration: none ; text-align: center;">D</a>
+    <a  class = "nav-link logo" href="index.html" target="_blank" style="color: black;">D</a>
     </nav>
     <br><br><br>
-  <h2 style="font-size: 48px; font-family: poppins; padding-left: 8vw;">
-    Hi👋,
+  <h2>
+    Hola👋,
     <br>
-    I'm Deepika S R - UX Designer<br> based in India, currently leading TinkerHub RIET.</h2>
+    I'm Deepika S R - an UX Designer<br> based in India, currently leading TinkerHub RIET.</h2>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
