--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     Hola👋,
     <br>
     I'm Deepika S R - an UX Designer<br> based in India, currently leading TinkerHub RIET.</h2>
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Projects</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Resume</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Connect</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Buy me a coffee</a></li>
+      </ul>
+      <p class="text-center text-muted">© 2022 Deepika</p>
+    </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
