--- a/work.html
+++ b/work.html
@@ -17,40 +17,22 @@
     <script src="https://kit.fontawesome.com/b63d77b0fb.js" crossorigin="anonymous"></script>
 </head>
 <body>
- 
-  <nav>
-    <br><h1 class="logo" style="color:#1b1b1b;text-align:center;font-family:comforter brush;">D</h1><br>
-  </nav>
-  <section id ="home">
-   
-    <nav class="navbar navbar-expand-lg">
-    
-          <ul class="navbar-nav" style="  position: absolute;
-          left: 50%;
-          transform: translatex(-50%); text-align: center; color: #1b1b1b;">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="work.html">Work</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.linkedin.com/in/deepika-sr-04042003/">Resume</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.linkedin.com/in/deepika-sr-04042003/">Connect</a>
-            </li>
-          </ul>
-        </div>
-        </div>
-      </div>
-    </nav>
-    
-  <div class="about">
-  <h2>
-    Hola👋,
-    <br>
-    I'm Deepika S R - an UX Designer<br> based in India, currently leading TinkerHub RIET.</h2>
+    <nav>
+       <br> <a href="index.html" style="text-decoration: none;"><h1 class="logo" style="color:#1b1b1b;text-align:center;font-family:comforter brush;">D</h1></a><br>
+      </nav>
+  <section id ="work">
+ <h2 style="text-align:left; margin-left: 2vw;">Selected Projects</h2>
+
+ <div class="card mb-3" style="width:50vw; margin-left: 25%;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">SPOTIFY</h5>
+      <p class="card-text">An UX Case study on the online music streaming app "SPOTIFY"</p>
+      <a class="card-text" href="#"><small class="text-muted">View more</small></a>
+    </div>
   </div>
-</section>
-<footer class="fixed-bottom"style="text-align: center;">
+\</section>
+<footer style="text-align: center;">
   <p>&copy 2022<br>All rights reserved</p>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
